--- a/Unsplash_Gallery/package.json
+++ b/Unsplash_Gallery/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.514.0",
     "postcss": "^8.5.5",
     "react": "^19.1.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-redux": "7.1.34",
